src/objects/StudentEquivalentCourse__c.object
<CustomObject>
    <description>WGU&apos;s courses and the link between transfered course for which a student may receive credit.</description>
    <fields>
        <fullName>CompetencyUnits__c</fullName>
        <description>Competency Units associated to the WGU course</description>
        <formula>WGUCourseInProgram__r.Course__r.CompetencyUnits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competency Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvalComments__c</fullName>
        <description>Comments added by the Evaluator</description>
        <label>Eval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvaluationComments__c</fullName>
        <label>RS Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushedToBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed To Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequirementSatisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the requirements are met for displaying competency</description>
        <label>Requirement Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SatisfiedBy__c</fullName>
        <description>This field tells what of the many options satisfied the requirement.  Can be the course, degree, course group.  This is used for the PDF output.</description>
        <formula>if(LEN(  TransferredGroup__c ) &gt;0, TransferredGroup__c,
if(LEN( EvaluationComments__c ) &gt; 0  &amp;&amp; RequirementSatisfied__c , EvaluationComments__c,

if(LEN( TransferAttendance__c ) &gt;0, TransferAttendance__r.DegreeAwarded__r.Name &amp; &apos; - &apos; &amp;  TransferAttendance__r.StudentTransferInstitution__r.TranscriptInstitution__r.Name,


if(AND(LEN( TransferredCourse__c ) &gt;0,  TransferredCourse__r.Subject__c != &apos;Req Satisfied&apos;),  TransferredCourse__r.CourseTitle__c &amp; &apos; (&apos; &amp; TransferredCourse__r.Grade__c &amp; &apos;) - &apos; &amp; TransferredCourse__r.StudentTransferInstitution__r.TranscriptInstitution__r.Name,

NULL ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field tells what of the many options satisfied the requirement.  Can be the course, degree, course group. This is mainly used for the PDF output.</inlineHelpText>
        <label>Satisfied By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SatisfiedInd__c</fullName>
        <description>Evaluation Satisfied.</description>
        <formula>IF ( UnderReview__c &amp;&amp; RequirementSatisfied__c = FALSE, &apos;N&apos;, IF (LEN ( TransferredCourse__c ) &gt; 0, &apos;Y&apos;, IF (LEN ( TransferredGroup__c ) &gt; 0, &apos;Y&apos;, IF (LEN ( TransferAttendance__c ) &gt; 0, &apos;Y&apos;, IF ( RequirementSatisfied__c , &apos;Y&apos;, &apos;N&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Satisfied Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( AND(OR(SatisfiedBy__c &lt;&gt; NULL, RequirementSatisfied__c = true),UnderReview__c = false), &quot;Met&quot;,IF( UnderReview__c , &quot;Under Review&quot;, &quot;Not Met&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferAttendance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transfer Attendance</description>
        <label>Transfer Attendance</label>
        <referenceTo>TransferAttendance__c</referenceTo>
        <relationshipLabel>Student Equivalent Courses</relationshipLabel>
        <relationshipName>Student_Equivalent_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferCourseName__c</fullName>
        <description>Subject associated to the transferred course</description>
        <formula>TransferredCourse__r.Subject__c &amp; &apos; &apos; &amp;   TransferredCourse__r.Course__c &amp; &apos; - &apos; &amp;   TransferredCourse__r.StudentTransferInstitution__r.TranscriptInstitution__r.Name</formula>
        <label>Transfer Course</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferEvaluation__c</fullName>
        <description>Related Transfer Evaluation</description>
        <label>Transfer Evaluation</label>
        <referenceTo>TransferEvaluation__c</referenceTo>
        <relationshipLabel>Student Equivalent Courses</relationshipLabel>
        <relationshipName>StudentEquivalentCourses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TransferRuleText__c</fullName>
        <description>Rule used to evaluate course transfer</description>
        <formula>WGUCourseInProgram__r.TransferRule__c &amp; &apos; &apos; &amp; WGUCourseInProgram__r.TransferRuleExt__c</formula>
        <label>Transfer Rule Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferredCourseGroup__c</fullName>
        <description>Transfer course group associated with the transferred course</description>
        <formula>TransferredCourse__r.CourseGroup__c</formula>
        <label>Transferred Course Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferredCourse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transferred Course</label>
        <referenceTo>StudentTransferredCourse__c</referenceTo>
        <relationshipLabel>Student Equivalent Courses</relationshipLabel>
        <relationshipName>StudentEquivalentCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferredDegree__c</fullName>
        <description>Degree awarded from transfer institution</description>
        <formula>TransferAttendance__r.DegreeAwarded__r.Name &amp; &apos; - &apos; &amp;  TransferAttendance__r.StudentTransferInstitution__r.TranscriptInstitution__r.Name</formula>
        <label>Transferred Degree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferredGroup__c</fullName>
        <description>The Group of Courses that Satisfies this requirement</description>
        <inlineHelpText>The Group of Courses that Satisfies this requirement.  This must match exactly to course groups from the institution</inlineHelpText>
        <label>Transferred Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnderReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a decision has not been made, but is under review for course equivalency</description>
        <inlineHelpText>Indicate that Student Equivalent course in currently under review</inlineHelpText>
        <label>Under Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGUCourseInProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Course In Program</label>
        <referenceTo>WGUCourseInProgram__c</referenceTo>
        <relationshipLabel>Student Equivalent Courses</relationshipLabel>
        <relationshipName>Student_Equivalent_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <formula>WGUCourseInProgram__r.Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WGU Course</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUGrade__c</fullName>
        <description>The Grade of the course for WGU.  Can be either Transfered or Requirement Satisfied</description>
        <formula>IF(OR(RequirementSatisfied__c = TRUE,  LEN(TransferAttendance__c )&gt;0), &apos;RS&apos;, 
   IF (OR(LEN(TransferredCourse__c ) &gt;0, LEN( TransferredGroup__c ) &gt;0), &apos;TR&apos;, 
       &apos;Not Met&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Grade of the course for WGU.  Can be either Transfered or Requirement Satisfied</inlineHelpText>
        <label>WGUGrade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUTitle__c</fullName>
        <formula>WGUCourseInProgram__r.Course__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WGU Title</label>
        <type>Text</type>
    </fields>
    <label>Student Equivalent Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Student Equivalent Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Equivalent Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>